[tool.poetry]
name = "api_builder"
version = "0.1.0"
description = ""
authors = ["Joey Stevens <joey.stevens00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
gomatic = "^0.6.9"
docker = "^4.2.0"
gitpython = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
